# moonbase

./: .gitignore  Makefile  Rakefile  main.rb  notes.rdoc  tiles.xcf
eventful/: NOTES.txt
eventful/moonbase/: bomb_controller.rb  emitter.rb  game.rb  hub_controller.rb  map.rb  player_controller.rb
eventful/spec/: bomb_controller_spec.rb  bomb_spec.rb  game_spec.rb  hub_controller_spec.rb  map_spec.rb  player_controller_spec.rb  player_spec.rb
lib/moonbase/: bomb_view.rb  building_views.rb  buildings.rb  game.rb  game_controller.rb  game_view.rb  map.rb  map_view.rb  order.rb  player.rb  projectile_views.rb  projectiles.rb  shadow.rb  vector2d.rb  vector3d.rb  wind.rb
listerine/moonbase/: bomb.rb  bomb_list.rb  bomb_view.rb  game.rb  hub_list.rb  logger.rb  player.rb  player_list.rb
listerine/spec/: bomb_list_spec.rb  bomb_spec.rb  game_spec.rb  hub_list_spec.rb  map_spec.rb  player_list_spec.rb  player_spec.rb  spec_helper.rb
ogre/: .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.in  autogen.sh  configure  configure.ac  plugins.cfg  resources.cfg
ogre/Frameworks/: Ogre.framework
ogre/data/: Moonbase.material  OgreDebugPanel.overlay
ogre/docs/: plan.txt
ogre/src/: Building.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Makefile.am  Makefile.in  Makefile.osx  Map.cpp  Map.hpp  Moonbase.hpp  MoonbaseApplication.hpp  MoonbaseFrameListener.hpp  Moonbaseloadingbar.hpp  Order.hpp  Player.cpp  Player.hpp  Projectile.hpp  client-main.cpp  config.h.in  server-main.cpp
punchout/: .rvmrc  Gemfile  Guardfile  Rakefile  main.rb  planning.txt  restructure.txt  todo.rdoc
punchout/config/: moonbase.yml
punchout/image_src/: bomb.ai  bomb.svgz  hub.ai  hub.svgz  hub_gosu.ai  hub_gosu.svgz  selection.ai  selection.svgz  strength-meter.ai  strength-meter.svgz  tile_gosu.ai  ui.ai  ui.svgz
punchout/lib/moonbase/: bomb_view.rb  building.rb  building_views.rb  create_phase.rb  events.rb  game.rb  game_controller.rb  hub.rb  hub_view.rb  map.rb  map_view.rb  meter.rb  meter_view.rb  move_phase.rb  order.rb  orders_phase.rb  phase.rb  player.rb  projectile.rb  quit_phase.rb  recolour.rb  shadow.rb  vector2d.rb  vector3d.rb  viewport.rb
punchout/moonbase/: bomb.rb  config.rb  game.rb  helpers.rb  hub.rb  logger.rb  map.rb  meter.rb  moonbase.rb  order.rb  projectile.rb  viewport.rb  window.rb
punchout/spec/: game_spec.rb  hub_spec.rb  order_spec.rb  player_spec.rb  spec_helper.rb  viewport_spec.rb
spec/: buildings_spec.rb  game_spec.rb  map_spec.rb  order_spec.rb  player_spec.rb  wind_spec.rb
src/: .gitignore  Makefile  building.h  client.h  defs.h  demo.cpp  demo.h  fixed.h  game.cpp  game.h  main.cpp  map.cpp  map.h  map_view.cpp  map_view.h  mapview.cpp  mapview.h  moonbase.pkg  player.h  point.h  projectile.h  tags  tile.cpp  tile.h  util.cpp  util.h  v3d.h  video.cpp  video.h
superglew/: Makefile
superglew/src/: Makefile  building.h  client.h  demo.cpp  game.h  map.cpp  map.h  mapview.cpp  player.h  point.h  tile.cpp  video.h
